--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>FlexStart Bootstrap Template - Index</title>
+  <title>Dedi Project</title>
   <meta content="" name="description">
 
   <meta content="" name="keywords">
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>FlexStart</span>
+        <span>Dediproject</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -87,12 +87,18 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
+          <h1 data-aos="fade-up">
+            Kami Menawarkan Solusi Untuk Mengembangkan Bisnis Anda
+          </h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">
+            Pelayanan terbaik adalah hal yang terpenting buat kami
+          </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                <span>Get Started</span>
+                <span>
+                  Mulai
+                </span>
                 <i class="bi bi-arrow-right"></i>
               </a>
             </div>
@@ -528,8 +534,8 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
-              <h3 style="color: #07d5c0;">Free Plan</h3>
-              <div class="price"><sup>$</sup>0<span> / mo</span></div>
+              <h3 style="color: #07d5c0;">Konsultasi Gratis</h3>
+              <div class="price"><sup>Rp.</sup>0<span> / Tahun</span></div>
               <img src="assets/img/pricing-free.png" class="img-fluid" alt="">
               <ul>
                 <li>Aida dere</li>
