--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/4.png" rel="icon">
+  <link href="assets/img/4.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -44,7 +44,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>Dediproject</span>
+        <span>Dedi Project</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -91,7 +91,7 @@
             Kami Menawarkan Solusi Untuk Mengembangkan Bisnis Anda
           </h1>
           <h2 data-aos="fade-up" data-aos-delay="400">
-            Pelayanan terbaik adalah hal yang terpenting buat kami
+            Jasa Pembuatan Website Profesional
           </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
@@ -121,22 +121,21 @@
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
-              <h3>Who We Are</h3>
-              <h2>Expedita voluptas omnis cupiditate totam eveniet nobis sint iste. Dolores est repellat corrupti reprehenderit.</h2>
+              <!-- <h3>Who We Are</h3> -->
               <p>
-                Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
+                Untuk menjangkau pangsa pasar digital, Anda harus memiliki website profesional dan SEO Friendly. Tidak cukup hanya tampil menarik tapi juga harus didukung fitur yang fungsional dengan struktur yang user friendly. Sehingga website bisnis Anda mudah ditemukan dimesin pencari sekaligus mampu memberi pengalaman hebat bagi pengguna.
               </p>
-              <div class="text-center text-lg-start">
-                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-                  <span>Read More</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
+              <p>
+                Selain itu, situs harus memiliki konten berkualitas yang mampu mempengaruhi audiens. Agar menjadi alat tangguh mewakili suara Anda untuk mendorong terjadinya konversi.
+              </p>
+              <p>
+                Dan jika itu yang Anda inginkan, maka kami dapat menjadi opsi mitra bisnis Anda.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/5.png" class="img-fluid" alt="">
           </div>
 
         </div>
@@ -150,8 +149,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Our Values</h2>
-          <p>Odit est perspiciatis laborum et dicta</p>
+          <!-- <h2>Nilai</h2> -->
+          <p>Kenapa Bisnis Anda Harus Memiliki Website</p>
         </header>
 
         <div class="row">
@@ -159,24 +158,30 @@
           <div class="col-lg-4">
             <div class="box" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Ad cupiditate sed est odio</h3>
-              <p>Eum ad dolor et. Autem aut fugiat debitis voluptatem consequuntur sit. Et veritatis id.</p>
+              <h3>Sarana Katalog Produk dan Jasa Anda</h3>
+              <p>
+                Dengan memasukkan foto produk, serta testimonial tentang pekerjaan yang anda lakukan, Anda dapat menunjukkan apa yang membuat bisnis Anda menjadi semakin unik.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="400">
               <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Voluptatem voluptatum alias</h3>
-              <p>Repudiandae amet nihil natus in distinctio suscipit id. Doloremque ducimus ea sit non.</p>
+              <h3>Jangkauan Pasar Yang Lebih Luas</h3>
+              <p>
+                Website adalah tempat yang bagus untuk mempromosikan produk Anda ke pasar yang lebih luas, karena produk Anda bisa diakses dan dilihat secara global.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="600">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Fugit cupiditate alias nobis.</h3>
-              <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
+              <h3>Hemat Waktu dan Uang</h3>
+              <p>
+                Coba anda bandingkan biaya membuat website dengan biaya memasang iklan di surat kabar, ketika Anda bisa melihat pasar potensial yang dapat anda capai dengan website, itu adalah cara yang sangat efektif untuk mempromosikan bisnis Anda.
+              </p>
             </div>
           </div>
 
@@ -192,37 +197,41 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
+                <span data-purecounter-start="0" data-purecounter-end="33" data-purecounter-duration="1" class="purecounter"></span>
+                <p>
+                  Pelanggan Senang
+                </p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="count-box">
               <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Projects</p>
+                <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
+                <p>Pilihan Desain Website</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="count-box">
               <i class="bi bi-headset" style="color: #15be56;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hours Of Support</p>
+                <span data-purecounter-start="0" data-purecounter-end="10000" data-purecounter-duration="1" class="purecounter"></span>
+                <p>
+                  Durasi Konsultasi
+                </p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-people" style="color: #bb0852;"></i>
               <div>
@@ -230,7 +239,7 @@
                 <p>Hard Workers</p>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -243,8 +252,10 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Features</h2>
-          <p>Laboriosam et omnis fuga quis dolor direda fara</p>
+          <h2>Fitur Kami</h2>
+          <p>
+            Keunggulan Memilih Jasa Pembuatan Website di Dedi Project
+          </p>
         </header>
 
         <div class="row">
@@ -259,42 +270,54 @@
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="200">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Eos aspernatur rem</h3>
+                  <h3>
+                    Desain Website Keren dan Mengikuti Trend
+                  </h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="300">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Facilis neque ipsa</h3>
+                  <h3>
+                    Website Responsive & Mobile Friendly
+                  </h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="400">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Volup amet voluptas</h3>
+                  <h3>
+                    Website Fast Loading
+                  </h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="500">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Rerum omnis sint</h3>
+                  <h3>
+                    Website SEO Friendly
+                  </h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="600">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Alias possimus</h3>
+                  <h3>
+                    Gratis Konsultasi Selamanya
+                  </h3>
                 </div>
               </div>
 
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="700">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3>Repellendus mollitia</h3>
+                  <h3>
+                    Bebas Memilih Desain Website
+                  </h3>
                 </div>
               </div>
 
@@ -526,23 +549,32 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Pricing</h2>
-          <p>Check our Pricing</p>
+          <h2>Harga</h2>
+          <p>
+            Daftar Penawaran Harga
+          </p>
         </header>
 
         <div class="row gy-4" data-aos="fade-left">
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
-              <h3 style="color: #07d5c0;">Konsultasi Gratis</h3>
-              <div class="price"><sup>Rp.</sup>0<span> / Tahun</span></div>
+              <h3 style="color: #07d5c0;">Ekonomi</h3>
+              <div class="price"><sup>Rp.</sup> 400 Ribu <span> / Tahun</span></div>
               <img src="assets/img/pricing-free.png" class="img-fluid" alt="">
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>
+                  Landing Page
+                </li>
+                <li>
+                  Revisi 1 Kali
+                </li>
+                <li>
+                  Hosting Gratis
+                </li>
+                <li class="na"> Gratis Domain .com, .sch, .co.id, dll</li>
+                <li class="na"> Bebas Update Konten </li>
+                <li class="na"> Bebas Memilih Desain Website </li>
               </ul>
               <a href="#" class="btn-buy">Buy Now</a>
             </div>
@@ -550,16 +582,25 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
-              <span class="featured">Featured</span>
-              <h3 style="color: #65c600;">Starter Plan</h3>
-              <div class="price"><sup>$</sup>19<span> / mo</span></div>
+              <span class="featured">Populer</span>
+              <h3 style="color: #65c600;">UKM</h3>
+              <div class="price"><sup>Rp.</sup>800 Ribu<span> / Tahun</span></div>
               <img src="assets/img/pricing-starter.png" class="img-fluid" alt="">
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>
+                  Landing Page, Blog, Website Sekolah
+                </li>
+                <li>
+                  Revisi 3 Kali, Bebas Konsultasi
+                </li>
+                <li>
+                  Hosting Berbayar
+                </li>
+                <li> 
+                  Gratis Domain .com, .sch, .co.id, dll
+                </li>
+                <li class="na"> Bebas Update Konten </li>
+                <li class="na"> Bebas Memilih Desain Website </li>
               </ul>
               <a href="#" class="btn-buy">Buy Now</a>
             </div>
@@ -567,15 +608,28 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="box">
-              <h3 style="color: #ff901c;">Business Plan</h3>
-              <div class="price"><sup>$</sup>29<span> / mo</span></div>
+              <h3 style="color: #ff901c;">Bisnis</h3>
+              <div class="price"><sup>Rp.</sup>1,5 Jt<span> / Tahun</span></div>
               <img src="assets/img/pricing-business.png" class="img-fluid" alt="">
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>
+                  Landing Page, Blog, Website Sekolah, Website Perusahaan
+                </li>
+                <li>
+                  Revisi 5 Kali, Bebas Konsultasi
+                </li>
+                <li>
+                  Hosting Berbayar
+                </li>
+                <li> 
+                  Gratis Domain .com, .sch, .co.id, dll
+                </li>
+                <li> 
+                  Bebas Update Konten 
+                </li>
+                <li> 
+                  Bebas Memilih Desain Website 
+                </li>
               </ul>
               <a href="#" class="btn-buy">Buy Now</a>
             </div>
@@ -583,15 +637,32 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="box">
-              <h3 style="color: #ff0071;">Ultimate Plan</h3>
-              <div class="price"><sup>$</sup>49<span> / mo</span></div>
+              <span class="featured">Terbaik</span>
+              <h3 style="color: #ff0071;"> Eksekutif </h3>
+              <div class="price"><sup>Rp.</sup>3 Jt<span> / Tahun</span></div>
               <img src="assets/img/pricing-ultimate.png" class="img-fluid" alt="">
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>
+                  Landing Page, Blog, Website Sekolah, Website Perusahaan
+                </li>
+                <li>
+                  Revisi Sepuasnya, Bebas Konsultasi
+                </li>
+                <li>
+                  Hosting Berbayar
+                </li>
+                <li> 
+                  Gratis Domain .com, .sch, .co.id, dll
+                </li>
+                <li> 
+                  Bebas Update Konten 
+                </li>
+                <li> 
+                  Bebas Memilih Desain Website 
+                </li>
+                <li>
+                  Email Profesional
+                </li>
               </ul>
               <a href="#" class="btn-buy">Buy Now</a>
             </div>
