--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Dedi Project</title>
-  <meta content="" name="description">
 
-  <meta content="" name="keywords">
+  <meta name="description" content="Dediproject dapat menjadi pilihan terbaik untuk membuat website terbaik untuk bisnis Anda dengan harga yang sangat terjangkau">
+  <meta name="keywords" content="Dediproject jasa pembuatan website">
+  <meta name="author" content="Dedi Nugroho">
 
   <!-- Favicons -->
   <link href="assets/img/4.png" rel="icon">
@@ -54,7 +55,7 @@
           <li><a class="nav-link scrollto" href="#features">Fitur</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Harga</a></li>
           <!-- <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Kontak</a></li>
           <!-- <li><a class="getstarted scrollto" href="#about">Get Started</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -105,13 +106,13 @@
             <div class="content">
               <!-- <h3>Who We Are</h3> -->
               <p>
-                Untuk menjangkau pangsa pasar digital, Anda harus memiliki website profesional dan SEO Friendly. Tidak cukup hanya tampil menarik tapi juga harus didukung fitur yang fungsional dengan struktur yang user friendly. Sehingga website bisnis Anda mudah ditemukan dimesin pencari sekaligus mampu memberi pengalaman hebat bagi pengguna.
+                Untuk menjangkau pangsa pasar digital, Anda harus memiliki website yang profesional dan SEO Friendly. Tidak cukup hanya tampil menarik tapi juga harus didukung fitur yang fungsional dengan struktur yang user friendly. Sehingga website bisnis Anda mudah ditemukan dimesin pencari seperti Google dan lainnya.
               </p>
               <p>
-                Selain itu, situs harus memiliki konten berkualitas yang mampu mempengaruhi audiens. Agar menjadi alat tangguh mewakili suara Anda untuk mendorong terjadinya konversi.
+                Selain itu, website bisnis anda harus memiliki konten berkualitas yang mampu mempengaruhi pelanggan anda.
               </p>
               <p>
-                Dan jika itu yang Anda inginkan, maka kami dapat menjadi opsi mitra bisnis Anda.
+                Maka dari itu kami dapat menjadi pilihan terbaik untuk membuat website terbaik untuk bisnis Anda dengan harga yang sangat terjangkau.
               </p>
             </div>
           </div>
@@ -185,7 +186,7 @@
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="33" data-purecounter-duration="1" class="purecounter"></span>
                 <p>
-                  Pelanggan Senang
+                  Pelanggan Puas
                 </p>
               </div>
             </div>
@@ -196,7 +197,7 @@
               <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Pilihan Desain Website</p>
+                <p>Banyak Pilihan Desain Website</p>
               </div>
             </div>
           </div>
@@ -207,7 +208,7 @@
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="10000" data-purecounter-duration="1" class="purecounter"></span>
                 <p>
-                  Durasi Konsultasi
+                  Gratis Konsultasi 
                 </p>
               </div>
             </div>
@@ -555,7 +556,7 @@
                   Revisi 1 Kali
                 </li>
                 <li>
-                  Hosting Gratis
+                  Pilihan Desain Website Terbatas
                 </li>
                 <li class="na"> Gratis Domain .com, .sch, .co.id, dll</li>
                 <li class="na"> Bebas Update Konten </li>
@@ -1300,7 +1301,7 @@
               <li><a class="bi bi-chevron-right" href="#features">Fitur</a></li>
               <li><a class="bi bi-chevron-right" href="#pricing">Harga</a></li>
               <!-- <li><a class="bi bi-chevron-right" href="#portfolio">Portfolio</a></li> -->
-              <li><a class="bi bi-chevron-right" href="#contact">Contact</a></li>
+              <li><a class="bi bi-chevron-right" href="#contact">Kontak</a></li>
             </ul>
           </div>
 
