--- a/index.html
+++ b/index.html
@@ -535,9 +535,12 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Harga</h2>
+          <!-- <h2>Harga</h2> -->
           <p>
             Daftar Penawaran Harga
+          </p>
+          <p>
+            "Promo 30%"
           </p>
         </header>
 
@@ -547,6 +550,7 @@
             <div class="box">
               <h3 style="color: #07d5c0;">Ekonomi</h3>
               <div class="price"><sup>Rp.</sup> 449 Ribu <span> / Tahun</span></div>
+
               <img src="assets/img/pricing-free.png" class="img-fluid" alt="">
               <ul>
                 <li>
@@ -574,7 +578,7 @@
               <img src="assets/img/pricing-starter.png" class="img-fluid" alt="">
               <ul>
                 <li>
-                  Landing Page, Blog, Website Sekolah
+                  Landing Page, Blog, Website Sekolah, Website Perusahaan
                 </li>
                 <li>
                   Revisi 3 Kali, Bebas Konsultasi
