--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
             Daftar Penawaran Harga
           </p>
           <p>
-            "Promo 30%"
+            "Masih Harga Promo"
           </p>
         </header>
 
@@ -549,7 +549,7 @@
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <h3 style="color: #07d5c0;">Ekonomi</h3>
-              <div class="price"><sup>Rp.</sup> 449 Ribu <span> / Tahun</span></div>
+              <div class="price"><sup>Rp.</sup> 400 Ribu <span> / Tahun</span></div>
 
               <img src="assets/img/pricing-free.png" class="img-fluid" alt="">
               <ul>
@@ -561,6 +561,9 @@
                 </li>
                 <li>
                   Pilihan Desain Website Terbatas
+                </li>
+                <li>
+                  Gratis Domain .my.id
                 </li>
                 <li class="na"> Gratis Domain .com, .sch, .co.id, dll</li>
                 <li class="na"> Bebas Update Konten </li>
@@ -574,7 +577,7 @@
             <div class="box">
               <span class="featured">Populer</span>
               <h3 style="color: #65c600;">UKM</h3>
-              <div class="price"><sup>Rp.</sup>849 Ribu<span> / Tahun</span></div>
+              <div class="price"><sup>Rp.</sup>800 Ribu<span> / Tahun</span></div>
               <img src="assets/img/pricing-starter.png" class="img-fluid" alt="">
               <ul>
                 <li>
@@ -587,10 +590,11 @@
                   Hosting Berbayar
                 </li>
                 <li> 
-                  Gratis Domain .com, .sch, .co.id, dll
+                  Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
                 </li>
                 <li class="na"> Bebas Update Konten </li>
                 <li class="na"> Bebas Memilih Desain Website </li>
+                <li class="na">Gratis Training Penggunaan Website</li>
               </ul>
               <a href="https://wa.me/6285879463677?text=Saya%20tertarik%20dengan%20website%20paket%20UKM" class="btn-buy">Pesan Sekarang</a>
             </div>
@@ -612,13 +616,16 @@
                   Hosting Berbayar
                 </li>
                 <li> 
-                  Gratis Domain .com, .sch, .co.id, dll
+                  Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
                 </li>
                 <li> 
                   Bebas Update Konten 
                 </li>
                 <li> 
                   Bebas Memilih Desain Website 
+                </li>
+                <li>
+                  Gratis Training Penggunaan Website
                 </li>
               </ul>
               <a href="https://wa.me/6285879463677?text=Saya%20tertarik%20dengan%20website%20paket%20Bisnis" class="btn-buy">Pesan Sekarang</a>
@@ -642,13 +649,16 @@
                   Hosting Berbayar
                 </li>
                 <li> 
-                  Gratis Domain .com, .sch, .co.id, dll
+                  Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
                 </li>
                 <li> 
                   Bebas Update Konten 
                 </li>
                 <li> 
-                  Bebas Memilih Desain Website 
+                  Bebas Memilih Desain Website
+                </li>
+                <li>
+                  Gratis Training Penggunaan Website
                 </li>
                 <li>
                   Email Profesional
