--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
               <img src="assets/img/pricing-starter.png" class="img-fluid" alt="">
               <ul>
                 <li>
-                  Landing Page, Blog, Website Sekolah, Website Perusahaan
+                  Landing Page, Blog, Website Sekolah, Website Usaha UKM
                 </li>
                 <li>
                   Revisi 3 Kali, Bebas Konsultasi
