add google my bisnis

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 <li>
                   Gratis Domain .my.id
                 </li>
-                <li class="na"> Gratis Domain .com, .sch, .co.id, dll</li>
+                <li class="na"> Termasuk Google My Bisnis</li>
                 <li class="na"> Bebas Update Konten </li>
                 <li class="na"> Bebas Memilih Desain Website </li>
               </ul>
@@ -587,7 +587,7 @@
                   Revisi 3 Kali, Bebas Konsultasi
                 </li>
                 <li>
-                  Hosting Berbayar
+                  Termasuk Google My Bisnis
                 </li>
                 <li> 
                   Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
@@ -613,7 +613,7 @@
                   Revisi 5 Kali, Bebas Konsultasi
                 </li>
                 <li>
-                  Hosting Berbayar
+                  Termasuk Google My Bisnis
                 </li>
                 <li> 
                   Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
@@ -646,7 +646,7 @@
                   Revisi Sepuasnya, Bebas Konsultasi
                 </li>
                 <li>
-                  Hosting Berbayar
+                  Termasuk Google My Bisnis
                 </li>
                 <li> 
                   Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
