--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 <li>
                   Gratis Domain .my.id
                 </li>
-                <li>Garansi 3 Hari</li>
+                <!-- <li>Garansi 3 Hari</li> -->
                 <li class="na"> Termasuk Google My Bisnis</li>
                 <li class="na"> Bebas Update Konten </li>
                 <li class="na"> Bebas Memilih Desain Website </li>
@@ -593,7 +593,7 @@
                 <li> 
                   Gratis Domain .com, .sch.id, .co.id, ponpes.id, dll
                 </li>
-                <li>Garansi 7 hari</li>
+                <!-- <li>Garansi 7 hari</li> -->
                 <li class="na"> Bebas Update Konten </li>
                 <li class="na"> Bebas Memilih Desain Website </li>
                 <li class="na">Gratis Training Penggunaan Website</li>
@@ -629,7 +629,7 @@
                 <li>
                   Gratis Training Penggunaan Website
                 </li>
-                <li>Garansi 14 Hari</li>
+                <!-- <li>Garansi 14 Hari</li> -->
               </ul>
               <a href="https://wa.me/6285879463677?text=Saya%20tertarik%20dengan%20website%20paket%20Bisnis" class="btn-buy">Pesan Sekarang</a>
             </div>
@@ -666,7 +666,7 @@
                 <li>
                   Email Profesional
                 </li>
-                <li>Garansi 30 Hari</li>
+                <!-- <li>Garansi 30 Hari</li> -->
               </ul>
               <a href="https://wa.me/6285879463677?text=Saya%20tertarik%20dengan%20website%20paket%20Eksekutif" class="btn-buy">Pesan Sekarang</a>
             </div>
